pgrx-tests/tests/todo/composite-types-broken-on-spi.stderr
error[E0277]: the trait bound `Vec<Option<pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>>: FromDatum` is not satisfied
  --> tests/todo/composite-types-broken-on-spi.rs:58:5
   |
58 |     #[pg_extern]
   |     ^^^^^^^^^^^^ the trait `FromDatum` is not implemented for `Vec<Option<pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>>`
   |
   = help: the following other types implement trait `FromDatum`:
             Vec<u8>
             Vec<Option<T>>
             Vec<T>
note: required by a bound in `pg_getarg`
  --> $WORKSPACE/pgrx/src/fcinfo.rs
   |
   | pub unsafe fn pg_getarg<T: FromDatum>(fcinfo: pg_sys::FunctionCallInfo, num: usize) -> Option<T> {
   |                            ^^^^^^^^^ required by this bound in `pg_getarg`

error[E0277]: the trait bound `Vec<Option<pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>>: FromDatum` is not satisfied
  --> tests/todo/composite-types-broken-on-spi.rs:75:5
   |
75 |     #[pg_extern]
   |     ^^^^^^^^^^^^ the trait `FromDatum` is not implemented for `Vec<Option<pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>>`
   |
   = help: the following other types implement trait `FromDatum`:
             Vec<u8>
             Vec<Option<T>>
             Vec<T>
note: required by a bound in `pg_getarg`
  --> $WORKSPACE/pgrx/src/fcinfo.rs
   |
   | pub unsafe fn pg_getarg<T: FromDatum>(fcinfo: pg_sys::FunctionCallInfo, num: usize) -> Option<T> {
   |                            ^^^^^^^^^ required by this bound in `pg_getarg`

error[E0277]: the trait bound `Vec<Option<pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>>: FromDatum` is not satisfied
  --> tests/todo/composite-types-broken-on-spi.rs:95:5
   |
95 |     #[pg_extern]
   |     ^^^^^^^^^^^^ the trait `FromDatum` is not implemented for `Vec<Option<pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>>`
   |
   = help: the following other types implement trait `FromDatum`:
             Vec<u8>
             Vec<Option<T>>
             Vec<T>
note: required by a bound in `pg_getarg`
  --> $WORKSPACE/pgrx/src/fcinfo.rs
   |
   | pub unsafe fn pg_getarg<T: FromDatum>(fcinfo: pg_sys::FunctionCallInfo, num: usize) -> Option<T> {
   |                            ^^^^^^^^^ required by this bound in `pg_getarg`

error[E0277]: the trait bound `Array<'_, pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>: IntoIterator` is not satisfied
   --> tests/todo/composite-types-broken-on-spi.rs:125:20
    |
125 |         for dog in dogs {
    |                    ^^^^ the trait `IntoIterator` is not implemented for `Array<'_, pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>`
    |
    = help: the trait `IntoIterator` is implemented for `Array<'_, pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>`

error[E0277]: the trait bound `Array<'_, pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>: IntoIterator` is not satisfied
   --> tests/todo/composite-types-broken-on-spi.rs:145:20
    |
145 |         for dog in dogs {
    |                    ^^^^ the trait `IntoIterator` is not implemented for `Array<'_, pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>`
    |
    = help: the trait `IntoIterator` is implemented for `Array<'_, pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>`

error[E0277]: the trait bound `Array<'_, pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>: IntoIterator` is not satisfied
   --> tests/todo/composite-types-broken-on-spi.rs:162:20
    |
162 |         for dog in dogs {
    |                    ^^^^ the trait `IntoIterator` is not implemented for `Array<'_, pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>`
    |
    = help: the trait `IntoIterator` is implemented for `Array<'_, pgrx::prelude::PgHeapTuple<'_, pgrx::AllocatedByRust>>`
